# CloudNativeNote

./: README.md  borg.md
bpf/cbpf-tutoial/: bpf_program_type.md
bpf/xdp-tutorial/: Basic_0x00.md
ddia/: chapater5.md  chapter6.md
golang/go语言设计与实现/内存管理/: 0x00垃圾回收.md
golang/go语言设计与实现/并发编程/: 0x00上下文Context.md  0x01同步原语锁.md  0x02定时器.md  0x04channel.md  0x05调度器.md  0x06网络调度器.md  0x07系统监控.md  年终总结.md
golang/go语言设计与实现/语言基础/: 0x00函数调用.md  0x01接口.md  main.go  main_test.go
go语言设计与实现/: Mutex.xmind  Slice.xmind  arrary.xmind  channel.xmind  for-range.xmind  hashmap.xmind
go语言设计与实现/语言核心/: arrray.md  for.md  hash.md  interface.md  select.md  slice.md  string.md  syscall.md
go语言设计与实现/语言核心/code/: for.go
go语言设计与实现/运行时/: channel.md  demo.lua  doc.md  select.md  同步原语和锁.md
kubernetes/extension-apiserver/kubernetes-posts/: go.mod  go.sum
rust/: Readme.md  drive_into_lifetime.md  lifetime.md  ownder-borrow-lifetime.md  rust_ownership_memory_internal.md
rust/drive_into_closure/: Cargo.toml
rust/drive_into_closure/doc/: closure_part1.md  doc.md
rust/drive_into_closure/src/: main.rs
rust/futures_tutorial/: Cargo.toml
rust/futures_tutorial/src/: dumb.rs  main.rs
rust/self_referential_struct/: Cargo.toml
rust/self_referential_struct/src/: main.rs
rust/tokio_example/: Cargo.toml
rust/why_rust_closure_so_hard/: Cargo.toml
并行计算理论/: 硬件的亲和性.md
性能之颠/: chapter1.md  chapter2-方法.md
深入理解linux网络/: chapter2.md  chapter9.md  dl_chapter1.md  dl_chapter10.md  dl_chapter5.md  dl_chapter6.md  dl_chapter7.md  dl_chapter8.md  dl_chapter9.md  linux_net.md
(+12 files in other folders)
