[package]
name = "futures_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.0"
reqwest = "0.11.9"
tokio = { version = "1.16.1", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.7"
